# initium

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.json  generate_icons.py  tauri.conf.json
.github/workflows/: ci.yml  release.yml
docs/: 00_LIRE_MOI.txt  GITHUB_SETUP_COMPLETE.md  INDEX.md  INITIUM_FINAL_SUMMARY.md  Initium_Cargo_Configuration.docx  Initium_Cargo_Configuration.html  Initium_Phase1_Agile_1.docx  Initium_Phase1_Agile_1.html  Initium_Phase2_Sprint1.docx  Initium_Phase2_Sprint1.html  Initium_Phase3_Sprint2.docx  Initium_Phase3_Sprint2.html  Initium_Phase4_Sprint3.docx  Initium_Phase4_Sprint3.html  Initium_Phase5_Sprint4.html  initium_Phase6_Sprint5.html
docs/sprint1/: COMMANDS_REFERENCE.md  FINAL_SUMMARY_SPRINT1.txt  SERVO_GITHUB_SETUP.md  SPRINT1_CHECKLIST.md  SPRINT1_IDE_GUIDE.md  SPRINT1_QUICK_START.md  SPRINT1_RESUME.txt  SPRINT1_START_HERE.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/i18n/: index.js
packaging/deb/DEBIAN/: control  postinst  prerm
packaging/deb/usr/share/applications/: initium.desktop
releases/: Initium_0.9.0_amd64.deb  initium_0.1.0-alpha_amd64.deb  initium_0.2.0_amd64.deb
src/: config.rs  launcher.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  initial-launcher.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  config_manager.rs  launcher.rs  main.rs
src-tauri/src/system/: command_runner.rs  platform.rs
src-tauri/src/ui/: mod.rs  servo_engine.rs
src/system/: autostart.rs  command_runner.rs  mod.rs
