[package]
name = "initium"
version = "0.1.0-alpha"
edition = "2021"
authors = ["Initium Team"]
description = "Tableau de bord intelligent multi-plateforme pour lancer applications et sites web"
license = "MIT"
repository = "https://github.com/Bermotard/initium"

[dependencies]
# UI Framework (Tauri) - Sprint 1/2
tauri = { version = "2.10", features = [] }

tauri-build = "2.5.5"

# Serialization & Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Conditional Compilation
cfg-if = "1.0"

# HTTP Server
hyper = { version = "1.8", features = ["full"] }
http = "1.4"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "6.0"
lazy_static = "1.4"

# Platform-specific
[target.'cfg(target_os = "linux")'.dependencies]
xdg = "3.0"
freedesktop_entry_parser = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Com"] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.5"
objc = "0.2"
objc-foundation = "0.1"
core-foundation = "0.10"

# Development Dependencies
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
criterion = "0.8"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1

[lib]
name = "initium"
path = "src/lib.rs"

[[bin]]
name = "initium"
path = "src/main.rs"

# Build dependencies for Tauri
[build-dependencies]
tauri-build = "2.5.5"
